[Glitch] Fix alignment of items in the account gallery in web UI and load more per page
Port 967e419f8fa87af74f4bb530d7493c1dde02fca8 to glitch-soc

--- a/app/javascript/flavours/glitch/styles/components/accounts.scss
+++ b/app/javascript/flavours/glitch/styles/components/accounts.scss
@@ -332,7 +332,6 @@
 .account-gallery__container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   padding: 4px 2px;
 }
 
